@@ -1,4 +1,5 @@
 29 Jul 2018
+fix: when empty array comments.php 
 update: site_config
 update: assumed fk inactive_update.php
 update: drop fk contstaint on dbbackup
